--- a/templates/room.html
+++ b/templates/room.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/room.css" />
         <title>webmcast // {{.ID}}</title>
     </head>
-    <body class="{{if not .Meta.HasVideo}}aside-chat{{end}} {{if (and .Meta.NSFW .Online)}}unconfirmed{{end}}" data-stream-id="{{.ID}}">
+    <body class="{{if not .Meta.HasVideo}}aside-chat{{end}}" data-stream-id="{{.ID}}" {{if (and .Meta.NSFW .Online)}}data-unconfirmed{{end}}>
         <main data-scrollbar>
             <div class="bg">
                 {{ template "nav.html" . }}
@@ -29,7 +29,7 @@
                             <a href="#" class="button icon collapse" title="Normal view">&#xf066;</a>
                             <a href="#" class="button icon fullscreen" title="Fullscreen">&#xf0b2;</a>
                         </div>
-                    {{- if .Meta.NSFW }}
+                    {{- if (and .Meta.NSFW .Online) }}
                         <div class="nsfw-message">
                             <p>This stream is for a mature audience only. // <a href="#" class="confirm-age">Proceed</a></p>
                         </div>
@@ -73,7 +73,8 @@
                 <div>
                     {{ if .Owned }}<a href="#" class="button icon edit" title="Edit name...">&#xf040;</a>{{ end }}
                     <h1 class="name">{{or .Meta.Name (printf "#%s" .ID)}}</h1>
-                    <span>by {{or .Meta.UserName "anonymous"}} {{ if .Meta.NSFW }}<span class="badge">18+</span>{{ end }}</span>
+                    <span>by {{or .Meta.UserName "anonymous"}}</span>
+                    {{ if .Meta.NSFW }}<span><span class="badge">18+</span></span>{{ end }}
                 </div>
                 <span><span class="icon" title="Viewers">&#xf06e;</span> <span class="viewers">0</span></span>
                 <span><span class="icon" title="Subscribers">&#xf004;</span> --</span>
