--- a/templates/room.html
+++ b/templates/room.html
@@ -25,7 +25,7 @@
                             <a href="#" class="button icon stop" title="Stop">&#xf04c;</a>
                             <a href="#" class="button icon mute" title="Mute">&#xf028;</a>
                             <a href="#" class="button icon unmute" title="Unmute">&#xf026;</a>
-                            <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
+                            <x-range tabindex="0" class="volume" title="Volume"></x-range>
                             <div class="status">not connected</div>
                             <a href="#" class="button icon theatre" title="Theatre mode">&#xf065;</a>
                             <a href="#" class="button icon collapse" title="Normal view">&#xf066;</a>
