--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -15,8 +15,8 @@
                     <h1>Hey there, {{.User.Name}}.</h1>
                     <span>Stream URL:
                         <a href="/stream/{{.User.Login}}?{{.User.StreamToken}}">Publish</a>
-                     // <a href="/{{.User.Login}}">View</a>
-                     // <a href="/stream/{{.User.Login}}">Download</a></span>
+                      / <a href="/{{.User.Login}}">View</a>
+                      / <a href="/stream/{{.User.Login}}">Download</a></span>
                 </div>
             </section>
         {{- if not .User.Activated }}
