--- a/static/css/room.css
+++ b/static/css/room.css
@@ -50,7 +50,7 @@ body:not(.aside-chat) .player-block:not(.theatre) {
 
 .player:not(.has-video) {
     flex: 1;
-    padding: 0 2em;
+    height: 3.33em;
 }
 
 .player[data-status="error"]:before {
@@ -97,17 +97,14 @@ body:not(.aside-chat) .player-block:not(.theatre) {
 
 .player .controls {
     display: flex;
-    padding: 0 0.5em;
-    align-items: center;
-    white-space: nowrap;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.player.has-video .controls {
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
+    padding: 0 0.5rem;
+    align-items: center;
+    white-space: nowrap;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .player.has-video[data-status="playing"] .controls,
@@ -173,7 +170,7 @@ body:not(.aside-chat) .player-block:not(.theatre) {
 }
 
 .stream-meta {
-    padding: 0 2em;
+    padding: 0 2rem;
 }
 
 .stream-meta .panel {
@@ -227,56 +224,6 @@ body:not(.aside-chat) .player-block:not(.theatre) {
     flex: 0 0 auto;
     flex-direction: column;
     overflow: hidden;
-}
-
-@media (min-width: 50em) {
-    body.aside-chat .chat {
-        position: absolute;
-        top: 100%;
-        height: calc(100vh - 7.33em);
-        max-height: 45rem;
-        margin-left: -20rem;
-        color: #222;
-    }
-
-    body.aside-chat .stream-header,
-    body.aside-chat .stream-meta,
-    body.aside-chat footer {
-        padding-right: 22rem;
-    }
-}
-
-@media (max-width: 50em) {
-    .chat {
-        position: fixed;
-        top: 0;
-        left: 100%;
-        bottom: 0;
-        z-index: 128;
-        background: #0a0a0a;
-        transition: transform 0.4s ease-in-out;
-    }
-
-    .chat-tab {
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        z-index: 127;
-        border-top: 2em solid transparent;
-        border-right: 2em solid #000;
-    }
-
-    .chat:hover, .chat-tab:hover + .chat {
-        transform: translateX(-100%);
-    }
-
-    .player .theatre {
-        display: none !important;
-    }
-
-    .player-block.theatre .player .controls {
-        padding-right: 2em;  /* avoid overlap with .chat-tab */
-    }
 }
 
 .chat h1 {
@@ -372,4 +319,66 @@ body:not(.aside-chat) .player-block:not(.theatre) .player:not(.is-fullscreen) .c
 .chat:not(.online) form,
 .chat:not(.logged-in) .input-form {
     display: none !important;
+}
+
+@media (min-width: 30em) {
+    .player:not(.has-video) .controls {
+        padding: 0 2rem;
+    }
+}
+
+@media (max-width: 30em) {
+    .stream-meta {
+        padding: 0 1rem;
+    }
+}
+
+@media (min-width: 50em) {
+    body.aside-chat .chat {
+        position: absolute;
+        top: 100%;
+        height: calc(100vh - 7.33em);
+        max-height: 45rem;
+        margin-left: -20rem;
+        color: #222;
+    }
+
+    body.aside-chat .stream-header,
+    body.aside-chat .stream-meta,
+    body.aside-chat footer {
+        padding-right: 22rem;
+    }
+}
+
+@media (max-width: 50em) {
+    .chat {
+        position: fixed;
+        top: 0;
+        left: 100%;
+        bottom: 0;
+        z-index: 128;
+        background: #0a0a0a;
+        transition: transform 0.4s ease-in-out;
+    }
+
+    .chat-tab {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index: 127;
+        border-top: 2em solid transparent;
+        border-right: 2em solid #000;
+    }
+
+    .chat:hover, .chat-tab:hover + .chat {
+        transform: translateX(-100%);
+    }
+
+    .player .theatre {
+        display: none !important;
+    }
+
+    .player-block.theatre .player .controls {
+        padding-right: 2em;  /* avoid overlap with .chat-tab */
+    }
 }
